--- a/.conkyrc
+++ b/.conkyrc
@@ -55,8 +55,8 @@ ${color grey}File systems:
  Home $color${fs_used /home}/${fs_size /home} ${fs_bar 6 /home}
 $hr
 ${color grey}Networking:
-IP: ${addr wlp5s0}
-Up:$color ${upspeed wlp5s0} ${color grey} - Down:$color ${downspeed wlp5s0}
+IP: ${addr eno1}
+Up:$color ${upspeed eno1} ${color grey} - Down:$color ${downspeed eno1}
 $hr
 ${color grey}Name              PID   CPU%   MEM%
 ${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
